  the translation

     #, c-format
     msgid "%d fatal error"
     msgid_plural "%d fatal errors"
     msgstr[0] "ein fataler Fehler"
     msgstr[1] "fatale Fehler"

  was earlier considered valid and now gives an error when "msgfmt --check"
  is used:
    "number of format specifications in 'msgid' and 'msgstr[1]' does not match"

* Programming languages support:

  - Python:
    xgettext now recognizes the source encoding from a "coding:" comment
    among the first two lines.  The default encoding is now ASCII, no longer
    ISO-8859-1.

* libgettextpo library:
  - The error handler type passed to po_file_read(), po_file_write(),
    po_message_check_format() has changed.
    This is an incompatible change: Programs using the library *must* update
    their code.
    Binary compatibility is guaranteed, however.

* Portability to mingw.

Version 0.14.5 - May 2005

* Updated the meaning of 'gcc-internal-format' to match GCC 4.0.

Version 0.14.4 - April 2005

* The gettext autoconf macros will now work with the forthcoming g++ 4.0.
* Fix improved detection of the locale on MacOS X.

Version 0.14.3 - March 2005

* Usability improvements in gettextize and autopoint.

* Programming languages support:
  - Scheme:
    Use the GNU guile definition of format strings.

Version 0.14.2 - February 2005

* Improved detection of the locale on MacOS X.

* The gettext autoconf macros now require autoconf 2.50 or newer.

* Programming languages support:

  - Scheme:
    xgettext now also supports Scheme. Best used with guile 1.7 or newer.

* msggrep is much faster now.

* libgettextpo library:
  - New functions for constructing PO files in memory and writing them to
    files.
  - The error handling is now customizable.

* Documentation:

  - New tutorial document, written by Gora Mohanty.
  - New FAQ document.
  - New documentation sections: Scheme, Release Management.

* Bug fixes for Turkish and Estonian locales.

* Security fixes.

Version 0.14 - January 2004
